[tool.poetry]
name = "health-app"
version = "0.1.0"
description = "BMI Health API with FastAPI"
authors = ["Jonas"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
